@@ -1,10 +1,9 @@
 package com.enterprise.regulatory.worker;
 
-import java.util.HashMap;
-import java.util.Map;
-import java.util.Objects;
-import java.util.UUID;
-
+import com.enterprise.regulatory.repository.RegulatoryRequestRepository;
+import jakarta.annotation.PreDestroy;
+import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 import org.camunda.bpm.client.ExternalTaskClient;
 import org.camunda.bpm.client.task.ExternalTask;
 import org.camunda.bpm.client.task.ExternalTaskHandler;
@@ -16,11 +15,10 @@ import org.springframework.core.annotation.Order;
 import org.springframework.stereotype.Component;
 import org.springframework.transaction.annotation.Transactional;
 
-import com.enterprise.regulatory.repository.RegulatoryRequestRepository;
-
-import jakarta.annotation.PreDestroy;
-import lombok.RequiredArgsConstructor;
-import lombok.extern.slf4j.Slf4j;
+import java.util.HashMap;
+import java.util.Map;
+import java.util.Objects;
+import java.util.UUID;
 
 /**
  * External Task Worker for Risk Scoring.
@@ -30,82 +28,82 @@ import lombok.extern.slf4j.Slf4j;
 @RequiredArgsConstructor
 @Slf4j
 public class RiskScoringWorker implements ExternalTaskHandler {
-
+    
     private static final String TOPIC_NAME = "risk-scoring";
     private static final int MAX_RETRIES = 3;
     private static final long RETRY_TIMEOUT = 5000L;
-
+    
     private final ExternalTaskClient externalTaskClient;
     private final RegulatoryRequestRepository requestRepository;
     private TopicSubscription subscription;
-
+    
     @EventListener(ApplicationReadyEvent.class)
     @Order(2)
     public void subscribe() {
         log.info("Subscribing to topic: {}", TOPIC_NAME);
         subscription = externalTaskClient.subscribe(TOPIC_NAME)
-                .lockDuration(30000)
-                .handler(this)
-                .open();
+                           .lockDuration(30000)
+                           .handler(this)
+                           .open();
     }
-
+    
     @PreDestroy
     public void unsubscribe() {
         if (subscription != null) {
             subscription.close();
         }
     }
-
+    
     @Override
     @Transactional
     public void execute(ExternalTask externalTask, ExternalTaskService externalTaskService) {
         String requestId = externalTask.getVariable("requestId");
         String requestType = externalTask.getVariable("requestType");
         String department = externalTask.getVariable("department");
-
+        
         log.info("Calculating risk score for request: {}, type: {}, department: {}",
-                requestId, requestType, department);
-
+            requestId, requestType, department);
+        
         try {
             int riskScore = calculateRiskScore(requestId, requestType, department);
-
+            
             // Update the regulatory request with the risk score
             updateRequestRiskScore(requestId, riskScore);
-
+            
             Map<String, Object> variables = new HashMap<>();
             variables.put("riskScore", riskScore);
             variables.put("riskCategory", categorizeRisk(riskScore));
             variables.put("riskAssessmentTimestamp", System.currentTimeMillis());
-
+            
             externalTaskService.complete(externalTask, variables);
             log.info("Risk scoring completed for request: {} with score: {}", requestId, riskScore);
-
+            
         } catch (Exception e) {
             log.error("Error during risk scoring for request: {}", requestId, e);
             handleFailure(externalTask, externalTaskService, e);
         }
     }
-
+    
     private int calculateRiskScore(String requestId, String requestType, String department) {
         int baseScore = 30;
-
+        
         // Adjust based on request type
         baseScore += getRequestTypeRiskFactor(requestType);
-
+        
         // Adjust based on department
         baseScore += getDepartmentRiskFactor(department);
-
+        
         // Random factor to simulate complex risk calculation
         // In production, this would use ML models or rule engines
         baseScore += (int) (Math.random() * 20);
-
-        return Math.min(100, Math.max(0, baseScore));
+        
+        return Math.clamp(baseScore, 0, 100);
     }
-
+    
     private int getRequestTypeRiskFactor(String requestType) {
         if (requestType == null)
             return 10;
-
+        
         return switch (requestType.toUpperCase()) {
             case "FINANCIAL_PRODUCT" -> 25;
             case "REGULATORY_CHANGE" -> 30;
@@ -116,11 +114,11 @@ public class RiskScoringWorker implements ExternalTaskHandler {
             default -> 5;
         };
     }
-
+    
     private int getDepartmentRiskFactor(String department) {
         if (department == null)
             return 5;
-
+        
         return switch (department.toUpperCase()) {
             case "TRADING" -> 20;
             case "INVESTMENT" -> 15;
@@ -130,7 +128,7 @@ public class RiskScoringWorker implements ExternalTaskHandler {
             default -> 5;
         };
     }
-
+    
     private String categorizeRisk(int riskScore) {
         if (riskScore >= 80)
             return "CRITICAL";
@@ -142,7 +140,7 @@ public class RiskScoringWorker implements ExternalTaskHandler {
             return "LOW";
         return "MINIMAL";
     }
-
+    
     private void updateRequestRiskScore(String requestId, int riskScore) {
         try {
             UUID uuid = UUID.fromString(requestId);
@@ -154,18 +152,18 @@ public class RiskScoringWorker implements ExternalTaskHandler {
             log.warn("Could not parse requestId as UUID: {}", requestId);
         }
     }
-
+    
     private void handleFailure(ExternalTask externalTask, ExternalTaskService externalTaskService, Exception e) {
         int retries = externalTask.getRetries() != null ? externalTask.getRetries() : MAX_RETRIES;
-
+        
         if (retries > 0) {
             log.warn("Retrying risk scoring, remaining retries: {}", retries - 1);
             externalTaskService.handleFailure(
-                    externalTask,
-                    "Risk scoring failed: " + e.getMessage(),
-                    e.getClass().getName(),
-                    retries - 1,
-                    RETRY_TIMEOUT);
+                externalTask,
+                "Risk scoring failed: " + e.getMessage(),
+                e.getClass().getName(),
+                retries - 1,
+                RETRY_TIMEOUT);
         } else {
             log.error("Max retries exceeded for risk scoring, creating incident");
             // Set default risk score and continue
